changed assets location

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shopping-cart-mine",
-  "homepage": "https://MykolasS77.github.io/Shopping-Cart-React/",
+  "homepage": "https://mykolasS77.github.io/Shopping-Cart-React/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
